[package]
name = "cm"
version = "0.1.0"
authors = ["Nicklas Boman <smurfd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cm_worker = {path = "cm_worker/"}
cm_database = {path = "cm_database/"}
rusqlite = "0.24.2"
walkdir = "2"
